--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 NODE_ENVIROMMENT=development 
-PORT=Your port for example 3000
-DATABASE= for example: mongodb+srv://test:<PASSWORD>@cluster1-fsrf5.mongodb.net/example?retryWrites=true&w=majority
-DATABASE_PASSWORD= Your password
+PORT=8080
+LOCAL_DATABASE=mongodb://localhost:27017
+DATABASE_PASSWORD=
 
 JWT_SECRET=Your secret                  
 JWT_EXPIRES_IN=30d
