--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "example",
+  "name": "expander-system",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "debug": "ndb server.js",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Moath Shreim",
   "license": "ISC",
@@ -22,5 +23,8 @@
     "mongoose": "^5.7.7",
     "validator": "^12.0.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
