--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hpp": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
+    "react-leaflet": "^2.7.0",
     "validator": "^12.0.0",
     "xss-clean": "^0.1.1"
   },
