--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-<<<<<<< HEAD
-    "react-scripts": "3.4.3",
     "react-sidebar": "^3.0.2",
-    "styled-components": "^5.1.1"
-=======
+    "styled-components": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
->>>>>>> ff19da69a1811c89feaa9845dcb20938ef4a7cbc
   },
   "scripts": {
     "start": "react-scripts start",
