--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,17 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
+    "leaflet-react-track-player": "^1.3.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-sidebar": "^3.0.2",
-    "styled-components": "^5.1.1",
+    "react-leaflet-polyline": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-sidebar": "^3.0.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
