WIP: websocket integration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Moath Shreim",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -21,8 +22,11 @@
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
     "hpp": "^0.2.2",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
+    "react-global-hook": "^2.0.0-rc2",
+    "react-icons": "^3.11.0",
     "react-leaflet": "^2.7.0",
     "socket.io": "^2.3.0",
     "validator": "^12.0.0",
