fixed error in map

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "expander-system",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "debug": "ndb server.js",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "expanderstart": "concurrently \"npm:server\" \"npm:client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Moath Shreim",
   "license": "ISC",
