configured mongodb server

--- a/config.env
+++ b/config.env
@@ -1,6 +1,7 @@
 NODE_ENVIROMMENT=development 
 PORT=8080
 LOCAL_DATABASE=mongodb://localhost:27017
+DATABASE=mongodb+srv://expander-system:EHI5UNr7y7umh8f6@clusterdatastorage-cfsxf.mongodb.net/expander_system?retryWrites=true&w=majority
 DATABASE_PASSWORD=
 
 JWT_SECRET=Your secret                  
