--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
@@ -14,6 +15,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-global-hook": "^2.0.0-rc2",
+    "react-icons": "^3.11.0",
     "react-leaflet-polyline": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
